finished deletes demo

--- a/errors.html
+++ b/errors.html
@@ -5,17 +5,27 @@
   <link rel="stylesheet" href="demo.css" />
   <script type="text/javascript" src="jquery.js"></script>
   <script type="text/javascript" src="jquery.blunder.js"></script>
+  <script type="text/javascript" src="demo.js"></script>
 </head>
 <body>
   <div id="page">
     <h1>Sign Up</h1>
     <form>
       <div class="errors">
-        <h2>Your account could not be created.  Please correct the following errors.</h2>
+        <h2>
+          Your account could not be created.  
+          Please correct the following errors.
+        </h2>
         <ul>
-          <li data-errorkey="username">The username "John Smith" is already taken</li>
-          <li data-errorkey="birth-date">Birth Date is required</li>
-          <li data-errorkey="expiration-date">Expiration Date is required</li>
+          <li data-errorkey="username">
+            The username "jsmith" is already taken
+          </li>
+          <li data-errorkey="birth-date">
+            Birth Date is required
+          </li>
+          <li data-errorkey="expiration-date">
+            Expiration Date is required
+          </li>
         </ul>
       </div>
       <fieldset>
