non enhanced versions, some cleanup

--- a/deletes_enhanced.html
+++ b/deletes_enhanced.html
@@ -4,6 +4,9 @@
   <title>Deletes Demo</title>
   <link rel="stylesheet" href="demo.css" />
   <script type="text/javascript" src="jquery.js"></script>
+  <script type="text/javascript" src="jquery.deleteList.js"></script>
+  <script type="text/javascript" src="rotate.js"></script>
+  <script type="text/javascript" src="enhance.js"></script>
   <script type="text/javascript">
     $(function() {
       $('.delete-button').click(function() {
