--- a/errors_enhanced.html
+++ b/errors_enhanced.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html> 
 <html> 
 <head> 
-  <title>Errors</title>
+  <title>Errors Enhanced</title>
   <link rel="stylesheet" href="demo.css" />
+  <script type="text/javascript" src="jquery.js"></script>
+  <script type="text/javascript" src="jquery.blunder.js"></script>
+  <script type="text/javascript" src="enhance.js"></script>
 </head>
 <body>
   <div id="page">
