--- a/search_enhanced.html
+++ b/search_enhanced.html
@@ -3,11 +3,17 @@
 <head> 
   <title>Search Demo</title>
   <link rel="stylesheet" href="demo.css" />
+  <script type="text/javascript" src="jquery.js"></script>
+  <script type="text/javascript" src="quicksilver.js"></script>
+  <script type="text/javascript" src="jquery.liveSearch.js"></script>
+  <script type="text/javascript" src="autocolumn.js"></script>
+  <script type="text/javascript" src="enhance.js"></script>
 </head>
 <body>
   <div id="page">
     <h1>Browse Books By Category</h1>
-    <div class="categories">
+    <input type="text" class="search" placeholder="Type here to search" />
+    <div class="searchable categories">
       <div>
         <h1>Entertainment &amp; Leisure</h1>
         <ul>
