--- a/confirm.html
+++ b/confirm.html
@@ -17,9 +17,8 @@
         <input type="text" id="name" name="name" />
         <label for="email">Email</label>
         <input type="text" id="email" name="email" />
-        <div>
+        <div class="actions">
           <input type="submit" class="button" value="Update Account" />
-          <br />
           <input type="submit" class="delete-button" value="Delete Account" 
             data-warning="Your account will be deleted forever.  You cannot undo this action."
             data-confirm="I understand, delete my account" />
