fixed some titles

--- a/deletes_enhanced.html
+++ b/deletes_enhanced.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html> 
 <head> 
-  <title>Deletes Demo</title>
+  <title>Deletes Enhanced</title>
   <link rel="stylesheet" href="demo.css" />
   <script type="text/javascript" src="jquery.js"></script>
   <script type="text/javascript" src="jquery.deleteList.js"></script>
