--- a/deletes.html
+++ b/deletes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html> 
 <head> 
-  <title>Deletes Demo</title>
+  <title>Deletes</title>
   <link rel="stylesheet" href="demo.css" />
   <script type="text/javascript" src="jquery.js"></script>
   <script type="text/javascript">
