updated more titles

--- a/search.html
+++ b/search.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html> 
 <head> 
-  <title>Search Demo</title>
+  <title>Search</title>
   <link rel="stylesheet" href="demo.css" />
 </head>
 <body>
