--- a/search_enhanced.html
+++ b/search_enhanced.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html> 
 <head> 
-  <title>Search Demo</title>
+  <title>Search Enhanced</title>
   <link rel="stylesheet" href="demo.css" />
   <script type="text/javascript" src="jquery.js"></script>
   <script type="text/javascript" src="quicksilver.js"></script>
